# pdml

./: Cargo.toml  LICENSE  README.md  example.pdml
pdml-lib/: Cargo.toml
pdml-lib/src/: lexer.rs  lib.rs  parser.rs  reader.rs  scrape.rs
pdml-macros/: Cargo.toml
pdml-macros/src/: lib.rs
src/: main.rs
